# SimpleImageSorter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: ImageViewer.py  file_operations.py  folder_buttonwidget.py  help_window.py  image_loader.py  image_viewer.py  speciesnet_buttonwidget.py  thumbnail_creator.py
